--- a/src/views/Notable/Notable.css
+++ b/src/views/Notable/Notable.css
@@ -1,6 +1,5 @@
-.notable {
+.notableDesc {
   width: 70%;
-  min-height: 70dvh;
   background-color: #fafafa;
   margin: 0 auto 1rem auto;
   display: flex;
@@ -10,22 +9,35 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 50%;
+  max-width: 45%;
   margin: 1rem auto;
 }
-.text h3 {
+.image img {
+  max-width: 100%;
+}
+.text{
+  margin: .4rem;
+  margin-bottom: 1rem;
+}
+
+.notableNameTitle {
   font-size: 2.4rem;
   color: #2d4759;
 }
-.text div {
+.NotableDescription {
+  text-align: left;
   font-size: 1.2rem;
 }
+
 @media screen and (min-width: 750px) {
-  .notable {
+  .notableDesc{
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
   }
-  .image{
-    margin: 1rem    ;
+  .image {
+    margin: 1rem;
   }
+  .text{
+  max-width: 50%;
+}
 }
