--- a/src/views/Article/Article.css
+++ b/src/views/Article/Article.css
@@ -1,5 +1,4 @@
 .articleContent{
-    width: 75%;
     margin: auto;
     padding-bottom: 1.3rem;
     display: flex;
@@ -24,4 +23,9 @@
 .articleContent{
     font-size: 1.5rem;
 
+}
+@media screen and (min-width: 750px) {
+    .articleContent{
+        width: 75%;
+    }
 }
